fixed image distortion

--- a/carousel2/carousel.css
+++ b/carousel2/carousel.css
@@ -9,6 +9,11 @@
   margin: auto;
 }
 
+img {
+  height: 500px;
+  object-fit: cover;
+}
+
 /* Hide the images by default */
 .mySlides {
   display: none;
